   brush-modifying paint options
 - Use ALT+number and ALT+Tab shortcuts to navigate between images
   in both single- and multi-window mode
 - Make 'Export to' always activatable and fall back to 'Export...' if
   no export target has been set yet
 - In single-window mode, add new dockable dialogs to the image window
   instead of in a new window


Core:

 - Add GimpMotionBuffer which abstracts away stroke smoothing behind
   a simple API and takes it out of GimpDisplayShell
 - Add a GimpIdTable utility class
 - Add a GimpDockContainer interface
 - Add a GimpSessionManaged interface
 - Add GimpCanvasRectangleGuides which makes the rectangle tool's
   guides draw properly


Libgimp:

 - Make libgimp depend on GdkPixbuf
 - Add API to create layers from cairo surfaces
 - Make it impossible to include individual files from any GIMP
   library. This was always forbidden and designed so it most
   probably breaks, but now it reliably breaks using #error
 - Deprecate the "set_sensitive" logic and use g_object_bind_property()


Plug-ins:

 - Use poppler's cairo API to load PDFs, the pixbuf API is removed
 - Port screenshot from GdkPixbuf to cairo
 - Fix the annoying parser build warnings in imagemap
 - Add a check-for-deprecated-procedures-in-script-fu make target
 - Update libpng code to not use deprecated API (file-mng and file-png)
 - Add an Item class to pygimp
 - Correct/update some labels and defaults in the JPEG plug-in's save dialog UI


Developer documentation:

 - Many updates


Source and build system:

 - Make cairo a global dependency, starting at libgimpcolor
 - Require poppler >= 0.12.4


General:

 - Some more undeprecations now that we use GTK+ 2.24
 - Fix lots of warnings that are new in -Wall in GCC 4.6
 - Lots of bug fixes and cleanup
 - Lots of translation updates


Changes in GIMP 2.7.2
=====================


UI:

 - A lot of undeprecations due to GTK+ 2.22 and 2.24
 - Lots and lots of cairo porting, calls to gdk_draw_* are gone